Request Pointer Lock
JavaScript interop works to successfully request pointer lock for obvious reasons. Thank god. If this didn't work I don't even know.

--- a/fps.html
+++ b/fps.html
@@ -20,8 +20,11 @@ html, body
 <script>
     var node = document.getElementById('main');
     var app = Elm.Fps.embed(node);
-    // Note: if your Elm module is named "MyThing.Root" you
-    // would call "Elm.MyThing.Root.embed(node)" instead.
+    
+    app.ports.requestPointerLock.subscribe( function()
+    {
+    	node.requestPointerLock();
+    } );
 </script>
 
 </body>
