Mouse Movement Tracking
Successfully reacts to mouse movements. Now all we have to do is make it actually like you know, rotate the direction vector instead of just being drunk.

--- a/fps.html
+++ b/fps.html
@@ -25,6 +25,11 @@ html, body
     {
     	node.requestPointerLock();
     } );
+
+    node.addEventListener( "mousemove", function( e )
+    {
+    	app.ports.mouseMove.send( [ e.movementX, e.movementY ] );
+    }, false );
 </script>
 
 </body>
