--- a/fps.html
+++ b/fps.html
@@ -4,9 +4,10 @@
 
 html, body
 {
-	margin: 0;
-	padding: 0;
-	border: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: #36393E;
 }
 
 </style>
